--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-echo "<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>My Project</title>
 </head>
 <body>
+    <h1>Welcome to My Project</h1>
 </body>
-</html>" > index.html
+</html>" >
